feature: improve team team section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#web-scraping">Scraping</a></li>
         <li><a href="#chatbot">Chatbot</a></li>
         <li><a href="#investimento">Investimento</a></li>
-        <li><a href="#team">Team</a></li>
+        <li><a href="#team">Equipe</a></li>
       </ul>
     </div>
   </nav>
@@ -50,6 +50,7 @@
         
         <div id="team" class="panel">
           <div class="flexbox-container-center">
+              <h2>Equipe</h2>
               <div class="team-members">
                   <div class="member">
                       <img class="team-member-photo" src="./src/img/douglas.png" alt="Douglas">
@@ -75,7 +76,7 @@
                   </div>
                   <div class="member">
                       <img class="team-member-photo" src="./src/img/pedro.png" alt="Pedro">
-                      <h4>Pedro Magalhaes</h4>
+                      <h4>Pedro Martins</h4>
                       <p>Data Science</p>
                       <div class="social-icons-box">
                           <ul class="social-icons">
